--- a/src/components/UsersList/UsersList.scss
+++ b/src/components/UsersList/UsersList.scss
@@ -1,3 +1,13 @@
+.userList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    margin-bottom: 5px;
+  }
+}
+
 .userList__link {
   display: flex;
   align-items: center;
